// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/songs/ScoreBadge.vue > { lamp: 0, score: 10000 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Failed
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-dark"
    >
      10000
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 1, score: 340000 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Assisted Clear
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-challenge"
    >
      340000
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 2, score: 800000 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Clear
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-primary"
    >
      800000
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 3, score: 950000 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Life 4
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-difficult"
    >
      950000
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 4, score: 940000 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Full Combo
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-beginner"
    >
      940000
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 5, score: 987650 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Great Full Combo
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-expert"
    >
      987650
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 6, score: 999990 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Perfect Full Combo
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-basic"
    >
      999990
    </span>
    
  </div>
</div>
`;

exports[`components/songs/ScoreBadge.vue > { lamp: 7, score: 1000000 } renders correctly 1`] = `
<div
  class="b-tooltip is-primary is-top"
>
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="true"
  >
    <div
      class="tooltip-content is-top"
      style="display: none;"
    >
      <span
        class=""
      />
      
      Marvelous Full Combo
      
    </div>
  </transition-stub>
  <div
    class="tooltip-trigger"
  >
    
    <span
      class="tag is-white"
    >
      1000000
    </span>
    
  </div>
</div>
`;
